@@ -1,0 +1,28 @@
+# flext - C++ layer for Max/MSP and pd (pure data) externals
+# Copyright (c) 2001-2004 Thomas Grill (xovo@gmx.net)
+#
+
+# your c++ compiler (define only if it's different than g++)
+# CXX=g++-3.3
+
+# where is the Max SDK? (version 4.5 upwards!!)
+MAXSDKPATH="/Volumes/Daten/Prog/MaxMSP-SDK/4.5 headers/c74support"
+
+# where is the SndObj include directory? 
+# (leave blank or comment out to disable SndObj support)
+# SNDOBJ=/usr/src/sndobj/include
+
+# where is the STK include directory?
+# (leave blank or comment out to disable STK support)
+# STK=/usr/src/stk/include
+
+# where should flext libraries be built?
+TARGDIR=./max-darwin
+
+# where should flext libraries be installed?
+# (leave blank to omit installation)
+INSTDIR="/Library/Application Support/Cycling '74/flext"
+
+# additional compiler flags
+# (check if they fit for your system!)
+UFLAGS=-DFLEXT_USE_SIMD -malign-power -maltivec -faltivec
